clusters/homelab/infrastructure/configs/postgres-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    # Pod Security Standards
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
