clusters/homelab/infrastructure/configs/plex-istio-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: plex-gateway
  namespace: plex
spec:
  selector:
    istio: gateway
  servers:
  # HTTP redirect to HTTPS
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - plex.daddyshome.fr
  # HTTPS with mTLS client certificate authentication
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: plex-tls-secret
    hosts:
    - plex.daddyshome.fr
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plex-redirect
  namespace: plex
spec:
  hosts:
  - plex.daddyshome.fr
  gateways:
  - plex-gateway
  http:
  # HTTP to HTTPS redirect for port 80
  - match:
    - port: 80
    redirect:
      scheme: https
      redirectCode: 301
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plex-https
  namespace: plex
spec:
  hosts:
  - plex.daddyshome.fr
  gateways:
  - plex-gateway
  http:
  # HTTPS traffic to service (port 443)
  - match:
    - port: 443
    route:
    - destination:
        host: plex
        port:
          number: 32400
